landing page integration profile-TikiTaka

--- a/src/app/components/Project/projects/projects.component.html
+++ b/src/app/components/Project/projects/projects.component.html
@@ -12,7 +12,7 @@
             <div class="modal-body mx-1 pt-1 row">
                 
               <div class="col-1 p-0 pt-3">
-                <img src="../../../../../assets/images/profile.jpg" class="rounded-circle profile-img"/>
+                <img src="assets/images/profile.jpg" class="rounded-circle profile-img"/>
                 <!--<img src="../../../../../assets/images/{{ userProfile.profilePhoto }}" class="rounded-circle profile-img"/>-->
               </div>
               
@@ -41,15 +41,15 @@
                   
                   <div class="row pl-3 mt-4 mb-0">
                           <div (click)="onChoose(1)" class="btn btn-secondary btn-nrml ml-0 {{ menue == 2 ? 'inactive' : ''}}" >
-                              <img src="../../../../../assets/images/copy.png" class="btn-logo"/>
+                              <img src="assets/images/copy.png" class="btn-logo"/>
                               Copy
                           </div>
                           <div (click)="onChoose(2)" class="btn btn-secondary btn-nrml ml-1 {{ menue == 1 ? 'inactive' : ''}}" >
-                              <img src="../../../../../assets/images/media.png"  class="btn-logo"/>
+                              <img src="assets/images/media.png"  class="btn-logo"/>
                               Media
                           </div>
                           <div (click)="onChoose(3)" class="btn btn-secondary btn-nrml ml-1">
-                              <img src="../../../../../assets/images/filter.png" class="btn-logo"/>
+                              <img src="assets/images/filter.png" class="btn-logo"/>
                               Criterias
                           </div>
                           <button type="submit" class="btn btn-primary btn-submit ml-2" [disabled]="projectForm.invalid || invalid">
@@ -157,7 +157,7 @@
         </div>
         <div class="modal-body mx-1 pt-1 row">
           <div class="col-1 p-0 pt-3">
-              <img src="../../../../../assets/images/profile.jpg" class="rounded-circle profile-img"/>
+              <img src="assets/images/profile.jpg" class="rounded-circle profile-img"/>
               <!--<img src="{{ userProfile.profilePhoto }}" class="rounded-circle profile-img"/>-->
           </div>
           <div class="col-11">
@@ -183,15 +183,15 @@
               </div>
               <div class="row pl-3 mt-4 mb-0">
                   <div (click)="onChoose(1)" class="btn btn-secondary btn-nrml ml-0">
-                      <img src="../../../../../assets/images/copy.png" class="btn-logo"/>
+                      <img src="assets/images/copy.png" class="btn-logo"/>
                       Copy
                   </div>
                   <div (click)="onChoose(2)" class="btn btn-secondary btn-nrml ml-1">
-                      <img src="../../../../../assets/images/media.png" class="btn-logo"/>
+                      <img src="assets/images/media.png" class="btn-logo"/>
                       Media
                   </div>
                   <div (click)="onChoose(3)" class="btn btn-secondary btn-nrml ml-1">
-                      <img src="../../../../../assets/images/filter.png" class="btn-logo"/>
+                      <img src="assets/images/filter.png" class="btn-logo"/>
                       Criterias
                   </div>
                   <div class="btn btn-primary btn-submit ml-2">
