--- a/src/app/components/landing_page/home/home.component.html
+++ b/src/app/components/landing_page/home/home.component.html
@@ -10,30 +10,6 @@
 	<title>index</title>
 </head>
 <body>
-<!-- First section Showcase -->
-<!--
-	<section class="showcase">
-		<div class="showcase-container">
-			<header id="login-anchor">
-				<div class="logo">
-					<p>I C U</p>
-				</div>
-				<app-login></app-login>
-			</header>
-			<section class="showcase-content">
-				<article>
-					<h1>Make your business easier</h1>
-					<p> ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-				<app-sign-up></app-sign-up>
-				</article>
-				<figure>
-					<img src="./../../../../assets/image.png" alt="image de front">
-				</figure>
-			</section>
-		</div>
-    </section>
--->
 
 <section class="showcase">
 		<header>
@@ -44,7 +20,7 @@
 				<nav>
 					<ul>
 						<li>
-							<a href=""><i class="fa fa-sign-in"></i>Login</a>
+							<a href="/login"><i class="fa fa-sign-in"></i>Login</a>
 						</li>
 						<li>
 							<a href=""><i class="fa fa-user-plus"></i>Sign Up</a>
