--- a/src/app/components/user-profile/profile/navbar-profile/navbar-profile.component.css
+++ b/src/app/components/user-profile/profile/navbar-profile/navbar-profile.component.css
@@ -114,12 +114,15 @@
   }
 }
 
-  .bg-pers{
-        background: linear-gradient(90deg, rgba(116,168,255,1) 1%, rgba(154,180,255,1) 37%, rgba(252,121,179,1) 91%);
+.bg-pers{
+  /*background: linear-gradient(90deg, rgba(116,168,255,1) 1%, rgba(154,180,255,1) 37%, rgba(252,121,179,1) 91%);*/
+  background: rgba(197, 197, 197, 0.67);
+  height:65px;
 }
   .img-taille{
     width: 50px;
     height: 50px;
+    display:none;
 }
 
 /*Search box css*/
@@ -184,3 +187,9 @@
   border: 0;
 }
 .capitalize { text-transform: capitalize; }
+
+#navbarSupportedContent > ul {
+  position: absolute;
+  right: 10px;
+}
+
