--- a/src/app/components/user-profile/profile/navbar-profile/navbar-profile.component.html
+++ b/src/app/components/user-profile/profile/navbar-profile/navbar-profile.component.html
@@ -6,16 +6,10 @@
     </button>
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent" >
-      <ul class="navbar-nav mr-auto">
-      </ul>
-      <ul class="navbar-nav">
-            <li class="nav-item  ml-5">
-                    <!-- <a class="nav-link" href="#">
-                      <i class="fa fa-search">
-                      </i>
-                      Search
-                    </a> -->
-                    <!-- search -->
+      
+      <ul class="navbar-nav"><!--
+            <li class="nav-item ml-5 float-right">
+                    
                     <div class="">
                       <div class="search">
                         <div>
@@ -24,7 +18,7 @@
                         </div>
                       </div>
                     </div>
-                  </li>
+                  </li>-->
                   <!-- /search -->
                   <li class="nav-item active ml-5">
                       <a class="nav-link" [routerLink]="['projects']" routerLinkActive="active">
