--- a/src/app/components/landing_page/login/login.component.html
+++ b/src/app/components/landing_page/login/login.component.html
@@ -52,7 +52,7 @@
 						</a>
 					</li>
 				</ul>
-				<p class="not-member">Not a member yet? <a href="#">Sign Up</a></p>
+				<p class="not-member">Not a member yet? <a [routerLink]="['/signUp']">Sign Up</a></p>
 			</div>
 		</div>
 		<div class="right-section">
