--- a/src/app/components/user-profile/profile/navbar-profile/navbar-profile.component.html
+++ b/src/app/components/user-profile/profile/navbar-profile/navbar-profile.component.html
@@ -49,7 +49,7 @@
         <li class="nav-item avatar dropdown  ml-5">
             <a class="nav-link" id="navbarDropdownMenuLink-55" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
-              <img src="../../../../../assets/images/{{user.profilePhoto}}" class="rounded-circle z-depth-0 img-taille"
+              <img src="assets/images/{{user.profilePhoto}}" class="rounded-circle z-depth-0 img-taille"
                 alt="avatar image">
             </a>
             <div class="dropdown-menu dropdown-menu-lg-right dropdown-secondary"
