--- a/src/app/components/user-profile/update-profile/update-profile.component.css
+++ b/src/app/components/user-profile/update-profile/update-profile.component.css
@@ -208,7 +208,7 @@ ul {
 }
 
 .contact form .full {
-	grid-column: 1 / 3;
+	grid-column: 1/4 ;
 }
 
 .contact form button,
@@ -220,15 +220,13 @@ ul {
 }
 
 .contact form button {
-	background: #c9e6ff;
+	background:grey;
 	border: 0;
 	text-transform: uppercase;
 }
 
 .contact form button:hover,
 .contact form button:focus {
-	background: linear-gradient(90deg, rgba(116,168,255,1) 1%, rgba(154,180,255,1) 37%, rgba(252,121,179,1) 91%);
-    ;
 	color: #FFF;
 	outline: 0;
 	transition: background-color 2s ease-out;
@@ -255,4 +253,12 @@ ul {
 .txt{
 	color: gray;
 
+}
+label{
+	font-weight: bold;
+}
+
+.title{
+	font-size: 40px;
+	font-weight: bold;
 }
