--- a/src/app/components/landing_page/home/home.component.html
+++ b/src/app/components/landing_page/home/home.component.html
@@ -11,8 +11,8 @@
 	<title>index</title>
 </head>
 <body>
-<!-- First section Showcase -->
-	<section class="showcase">
+
+<section class="showcase">
 		<header>
 			<div class="header-container">
 				<div class="landing-logo">
@@ -21,10 +21,10 @@
 				<nav>
 					<ul>
 						<li>
-							<a [routerLink]="['/login']" ><i class="fas fa-sign-in-alt"></i>Login</a>
+							<a href="/login"><i class="fa fa-sign-in"></i>Login</a>
 						</li>
 						<li>
-							<a [routerLink]="['/signUp']" ><i class="fas fa-user-plus"></i>Sign Up</a>
+							<a [routerLink]="['/signUp']" ><i class="fa fa-user-plus"></i>Sign Up</a>
 						</li>
 					</ul>
 				</nav>
