navbar responsive fixes / user projects fixed / +Project button

--- a/src/app/components/landing_page/new-password/new-password.component.html
+++ b/src/app/components/landing_page/new-password/new-password.component.html
@@ -1,8 +1,6 @@
-<nav class="navbar navbar-icon-top navbar-expand-lg navbar-dark bg-pers">
-  <a class="navbar-brand" [routerLink]="['']" routerLinkActive="active"><img src="../../../../../assets/images/logo.PNG"
-      class="rounded-circle z-depth-0 img-taille" alt="avatar image"></a>
+<nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand" href="#">I C U</a>
 </nav>
-
   
   <div class="card" class="mx-auto mt-5"  style="width: 55rem;">
     <h5 class="card-header">Reset password</h5>
