--- a/src/app/components/user-profile/profile/navbar-profile/navbar-profile.component.html
+++ b/src/app/components/user-profile/profile/navbar-profile/navbar-profile.component.html
@@ -21,7 +21,7 @@
                   </li>-->
                   <!-- /search -->
                   <li class="nav-item active ml-5">
-                      <a class="nav-link" [routerLink]="['projects']" routerLinkActive="active">
+                      <a class="nav-link" [routerLink]="['/home-profile']" routerLinkActive="active">
                         <i class="fa fa-home"></i>
                         Home
                         </a>
