--- a/src/app/components/landing_page/home/home.component.html
+++ b/src/app/components/landing_page/home/home.component.html
@@ -18,13 +18,13 @@
 				<div class="landing-logo">
 					<p>I.C.U</p>
 				</div>
-				<nav>
+			 	<nav>
 					<ul>
 						<li>
-							<a [routerLink]="['/login']" ><i class="fas fa-sign-in-alt"></i>Login</a>
+							<a [routerLink]="['/login']" ><i class="fa fa-sign-in-alt"></i>Login</a>
 						</li>
 						<li>
-							<a [routerLink]="['/signUp']" ><i class="fas fa-user-plus"></i>Sign Up</a>
+							<a [routerLink]="['/signUp']" ><i class="fa fa-user-plus"></i>Sign Up</a>
 						</li>
 					</ul>
 				</nav>
