--- a/src/app/components/user-profile/profile/navbar-profile/navbar-profile.component.css
+++ b/src/app/components/user-profile/profile/navbar-profile/navbar-profile.component.css
@@ -113,7 +113,9 @@
     top: -7px;
   }
 }
-
+.bgw{
+  background: white;
+}
 .bg-pers{
   background: linear-gradient(90deg, rgba(116,168,255,1) 1%, rgba(154,180,255,1) 37%, rgba(252,121,179,1) 91%);
   background: rgba(197, 197, 197, 0.67);
