--- a/src/app/components/user-profile/update-profile/update-profile.component.html
+++ b/src/app/components/user-profile/update-profile/update-profile.component.html
@@ -23,33 +23,33 @@
 
                 <p>
                                         <label>First Name</label>
-                    <input type="text" class="txt" name="firstName" formControlName="firstName" class="form-control" placeholder="{{user.firstName}}">
+                    <input type="text" class="txt" name="firstName" formControlName="firstName" class="form-control" value="{{CurrentUser.firstName}}">
                 </p>
 
                 <p>
                     <label>Last Name</label>
-                    <input type="text" class="txt" name="lastName" formControlName="lastName" class="form-control" placeholder="{{user.lastName}}" >
+                    <input type="text" class="txt" name="lastName" formControlName="lastName" class="form-control" value="{{CurrentUser.lastName}}" >
                 </p>
                 
                 
                 <p>                    
                     <label>Phone number</label>
-                    <input type="text" class="txt" name="tel" formControlName="tel" class="form-control" placeholder="{{user.tel}}">
+                    <input type="text" class="txt" name="tel" formControlName="tel" class="form-control" value="{{CurrentUser.tel}}">
                 </p>
 
 <p>
            <label class="full">Location</label>
-                    <input type="text" name="location" class="txt" rows="5" formControlName="location" class="form-control" placeholder="{{user.bio}}" />
+                    <input type="text" name="location" class="txt" rows="5" formControlName="location" class="form-control" value="{{CurrentUser.location}}" />
    
             </p>
             <p>
                     <label class="full">Facebook Link</label>
-                             <input type="text" name="url" class="txt" rows="5" formControlName="url" class="form-control" placeholder="{{user.bio}}" />
+                             <input type="text" name="url" class="txt" rows="5" formControlName="url" class="form-control" value="{{CurrentUser.url}}" />
                      </p>
                      <p>
                             <p>           
                             <label class="full">BIO  </label>
-                           <input type="text" name="bio" class="txt" rows="5" formControlName="bio" class="form-control" placeholder="{{user.bio}}" />
+                           <input type="text" name="bio" class="txt" rows="5" formControlName="bio" class="form-control" value="{{CurrentUser.bio}}" />
                             </p>
                                       
                                         <button  type="submit" class="full">Submit</button>
