fix update Profile

--- a/src/app/components/landing_page/login/login.component.html
+++ b/src/app/components/landing_page/login/login.component.html
@@ -36,7 +36,7 @@
 				<p class="just-or">OR</p>
 				<ul>
 					<li>
-						<a href="#">
+						<a>
 							<div class="social-media-link">
 								<i class="fab fa-facebook-f"></i>
 								<p>LOG IN WITH FACEBOOK</p>
@@ -44,7 +44,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="#">
+						<a (click)="socialSignIn('google')">
 							<div class="social-media-link">
 								<i class="fab fa-google"></i>
 								<p>LOG IN WITH GOOGLE</p>
