--- a/src/app/components/user-profile/update-profile/update-profile.component.html
+++ b/src/app/components/user-profile/update-profile/update-profile.component.html
@@ -1,8 +1,8 @@
-<div class="container">
+<div class="container" *ngIf="updateForm">
     <div class="wrapper animated bounceInLeft">
         <div class="company-info">
             <h3>Profile Settings</h3>
-            <img  src="../../../../../assets/images/{{user.profilePhoto}}" class="rounded-circle z-depth-0 img-taille">
+            <img  src="{{user.profilePhoto}}" class="rounded-circle z-depth-0 img-taille">
             <form [formGroup]="updatePhotoForm" (ngSubmit)="updatePhoto()">
                 <div class="tab-pane fade show active" id="p2">
                     <div class="modal-header header p-1 pl-3" >
@@ -17,44 +17,42 @@
         </div>
 
        
-        <div class="contact">
+        <div class="contact" >
             <h3 class="title">Update your infos:</h3>
-            <form [formGroup]="updateForm" (ngSubmit)="update()" class="mt-5">
+            <form [formGroup]="updateForm"   (ngSubmit)="update()" class="mt-5">
 
                 <p>
                                         <label>First Name</label>
-                    <input type="text" class="txt" name="firstName" formControlName="firstName" class="form-control" value="{{CurrentUser.firstName}}">
+                    <input type="text" class="txt" name="firstName" formControlName="firstName" class="form-control" >
                 </p>
 
                 <p>
                     <label>Last Name</label>
-                    <input type="text" class="txt" name="lastName" formControlName="lastName" class="form-control" value="{{CurrentUser.lastName}}" >
+                    <input type="text" class="txt" name="lastName" formControlName="lastName" class="form-control" >
                 </p>
                 
                 
                 <p>                    
                     <label>Phone number</label>
-                    <input type="text" class="txt" name="tel" formControlName="tel" class="form-control" value="{{CurrentUser.tel}}">
+                    <input type="text" class="txt" name="tel" formControlName="tel" class="form-control" >
                 </p>
 
 <p>
            <label class="full">Location</label>
-                    <input type="text" name="location" class="txt" rows="5" formControlName="location" class="form-control" value="{{CurrentUser.location}}" />
+                    <input type="text" name="location" class="txt" rows="5" formControlName="location" class="form-control" />
    
             </p>
             <p>
                     <label class="full">Facebook Link</label>
-                             <input type="text" name="url" class="txt" rows="5" formControlName="url" class="form-control" value="{{CurrentUser.url}}" />
+                             <input type="text" name="url" class="txt" rows="5" formControlName="url" class="form-control" />
                      </p>
                      <p>
                             <p>           
                             <label class="full">BIO  </label>
-                           <input type="text" name="bio" class="txt" rows="5" formControlName="bio" class="form-control" value="{{CurrentUser.bio}}" />
+                           <input type="text" name="bio" class="txt" rows="5" formControlName="bio" class="form-control" />
                             </p>
                                       
                                         <button  type="submit" class="full">Submit</button>
-                                        <button  type="reset" class="full">Annuler</button>
-
             </form>
         </div>
     </div>
