fix guards + fix updatePhoto Form

--- a/src/app/components/user-profile/update-profile/update-profile.component.html
+++ b/src/app/components/user-profile/update-profile/update-profile.component.html
@@ -1,4 +1,4 @@
-<div class="container" *ngIf="updateForm">
+<div class="container" >
     <div class="wrapper animated bounceInLeft">
         <div class="company-info">
             <h3>Profile Settings</h3>
@@ -9,10 +9,12 @@
                         <h6 class="modal-title font-weight-bold">Media</h6>
                     </div>
                     <div class="custom-file mb-3 fap-container file-container mt-4">
-                        <input (change)="onSelectedFile($event)" type="file" class="custom-file-input" id="customFile" name="filename">
+                        <input (onChange)="getImageFromInput($event)"  type="file" class="custom-file-input" formControlName="image">
                         <label class="custom-file-label form-control-plaintext inputFile mt-2" for="customFile" data-browse="File">    {{ progress != undefined ? progress+' % ' : ' . . .' }}</label>
                     </div> 
                 </div>
+                <button [disabled]="!updatePhotoForm.valid"  type="submit" class="full">Submit</button>
+
                 </form>
         </div>
 
